We added a most energetic exclamatory point!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Hi I'm BIG G</h1>
     <hr color=000000 noshade width=250 align=left>
     <h4>•I like to eat cookies</h4>
-    <h4>•I have an affinity for large letters, <br> particularly the 7th in the alphabet.</h4>
+    <h4>•I have an affinity for large letters, <br> particularly the 7th in the alphabet!</h4>
     </td>
   </tr>
 </table>
